z-index issues that prevent textbox from responding

--- a/io/main.css
+++ b/io/main.css
@@ -70,6 +70,8 @@ body{
     height:200px;
     box-sizing:border-box;
     text-align:center;
+    position:relative;
+    z-index:0;
 }
 #flex-item-name{
     flex:0 0 auto;
@@ -78,6 +80,8 @@ body{
     height:44px;
     padding:0 24px;
     box-sizing:border-box;
+    position:relative;
+    z-index:1;
 }
 #canvas-clipper{
     display:inline-block;
